@@ -1,0 +1,25 @@
+<T3DataStructure>
+    <meta type="array">
+        <langChildren>0</langChildren>
+        <langDisable>1</langDisable>
+    </meta>
+    <ROOT>
+        <type>array</type>
+        <el>
+            <settings.video>
+                <TCEforms>
+                    <exclude>1</exclude>
+                    <label>Video auswählen</label>
+                    <config>
+                        <type>group</type>
+                        <internal_type>db</internal_type>
+                        <allowed>tx_jhevimeo_domain_model_video</allowed>
+                        <size>1</size>
+                        <maxitems>1</maxitems>
+                        <minitems>1</minitems>
+                    </config>
+                </TCEforms>
+            </settings.video>
+        </el>
+    </ROOT>
+</T3DataStructure>
