@@ -1,44 +1,0 @@
-<f:layout name="Default" />
-
-This Template is responsible for creating a table of domain objects.
-
-If you modify this template, do not forget to change the overwrite settings
-in /Configuration/ExtensionBuilder/settings.yaml:
-  Resources:
-    Private:
-      Templates:
-        List.html: keep
-
-Otherwise your changes will be overwritten the next time you save the extension in the extension builder
-
-<f:section name="main">
-<h1>Listing for Video</h1>
-
-<f:flashMessages />
-
-<table  class="tx_jhevimeo" >
-	<tr>
-		<th><f:translate key="tx_jhevimeo_domain_model_video.vimeoid" /></th>
-		<th><f:translate key="tx_jhevimeo_domain_model_video.width" /></th>
-		<th><f:translate key="tx_jhevimeo_domain_model_video.height" /></th>
-		<th><f:translate key="tx_jhevimeo_domain_model_video.title" /></th>
-		<th><f:translate key="tx_jhevimeo_domain_model_video.description" /></th>
-		<th> </th>
-		<th> </th>
-	</tr>
-
-	<f:for each="{videos}" as="video">
-		<tr>
-			<td><f:link.action action="show" arguments="{video : video}"> {video.vimeoid}</f:link.action></td>
-			<td><f:link.action action="show" arguments="{video : video}"> {video.width}</f:link.action></td>
-			<td><f:link.action action="show" arguments="{video : video}"> {video.height}</f:link.action></td>
-			<td><f:link.action action="show" arguments="{video : video}"> {video.title}</f:link.action></td>
-			<td><f:link.action action="show" arguments="{video : video}"> {video.description}</f:link.action></td>
-			<td><f:link.action action="edit" arguments="{video : video}">Edit</f:link.action></td>
-			<td><f:link.action action="delete" arguments="{video : video}">Delete</f:link.action></td>
-		</tr>
-	</f:for>
-</table>
-
-<f:link.action action="new">New Video</f:link.action>
-</f:section>
