@@ -1,21 +1,0 @@
-<f:layout name="Default" />
-
-This Template is responsible for displaying a single view for a domain object
-
-If you modify this template, do not forget to change the overwrite settings
-in /Configuration/ExtensionBuilder/settings.yaml:
-  Resources:
-    Private:
-      Templates:
-        Show.html: keep
-
-Otherwise your changes will be overwritten the next time you save the extension in the extension builder
-
-<f:section name="main">
-<h1>Single View for Video</h1>
-
-<f:flashMessages />
-<f:render partial="Video/Properties" arguments="{video:video}" />
-<f:link.action action="list">Back to list</f:link.action><br />
-<f:link.action action="new">New Video</f:link.action>
-</f:section>
