@@ -1,25 +1,0 @@
-<f:layout name="Default" />
-
-This template displays a EDIT form for the current domain object.
-
-If you modify this template, do not forget to change the overwrite settings
-in /Configuration/ExtensionBuilder/settings.yaml:
-  Resources:
-    Private:
-      Templates:
-        Edit.html: keep
-
-Otherwise your changes will be overwritten the next time you save the extension in the extension builder
-
-<f:section name="main">
-<h1>Edit VideoList</h1>
-
-<f:flashMessages />
-
-<f:render partial="FormErrors" />
-
-<f:form action="update" name="videoList" object="{videoList}" >
-<f:render partial="VideoList/FormFields" arguments="{videoList:videoList}" />
-	<f:form.submit value="Save" />
-</f:form>
-</f:section>
