@@ -1,38 +1,0 @@
-<f:layout name="Default" />
-
-This Template is responsible for creating a table of domain objects.
-
-If you modify this template, do not forget to change the overwrite settings
-in /Configuration/ExtensionBuilder/settings.yaml:
-  Resources:
-    Private:
-      Templates:
-        List.html: keep
-
-Otherwise your changes will be overwritten the next time you save the extension in the extension builder
-
-<f:section name="main">
-<h1>Listing for VideoList</h1>
-
-<f:flashMessages />
-
-<table  class="tx_jhevimeo" >
-	<tr>
-		<th><f:translate key="tx_jhevimeo_domain_model_videolist.title" /></th>
-		<th><f:translate key="tx_jhevimeo_domain_model_videolist.description" /></th>
-		<th> </th>
-		<th> </th>
-	</tr>
-
-	<f:for each="{videoLists}" as="videoList">
-		<tr>
-			<td><f:link.action action="show" arguments="{videoList : videoList}"> {videoList.title}</f:link.action></td>
-			<td><f:link.action action="show" arguments="{videoList : videoList}"> {videoList.description}</f:link.action></td>
-			<td><f:link.action action="edit" arguments="{videoList : videoList}">Edit</f:link.action></td>
-			<td><f:link.action action="delete" arguments="{videoList : videoList}">Delete</f:link.action></td>
-		</tr>
-	</f:for>
-</table>
-
-<f:link.action action="new">New VideoList</f:link.action>
-</f:section>
