@@ -1,25 +1,19 @@
 <f:layout name="Default" />
 
-This template displays a NEW form for the current domain object.
+This Template is responsible for displaying a single view for a domain object
 
 If you modify this template, do not forget to change the overwrite settings
 in /Configuration/ExtensionBuilder/settings.yaml:
   Resources:
     Private:
       Templates:
-        New.html: keep
+        Show.html: keep
 
 Otherwise your changes will be overwritten the next time you save the extension in the extension builder
 
 <f:section name="main">
-<h1>New Video</h1>
+<h3>Single View for VideoList</h3>
 
 <f:flashMessages />
-
-<f:render partial="FormErrors" />
-
-<f:form action="create"  name="newVideo" object="{newVideo}">
-<f:render partial="Video/FormFields" />
-	<f:form.submit value="Create new" />
-</f:form>
+<f:render partial="VideoList/Properties" arguments="{videoList:videoList}" />
 </f:section>
